<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.czertainly</groupId>
        <artifactId>dependencies</artifactId>
        <version>1.3.1</version>
    </parent>

    <groupId>com.otilm</groupId>
    <artifactId>doc-interface</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <revision>2.16.3-SNAPSHOT</revision>
        <apiVersion>2.16.3-SNAPSHOT</apiVersion>

        <!-- Plugin versions -->
        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
        <exec-maven-plugin.version>3.1.0</exec-maven-plugin.version>
        <maven-clean-plugin.version>3.4.1</maven-clean-plugin.version>

        <!-- Dependency versions -->
        <springdoc-openapi.version>2.8.14</springdoc-openapi.version>
        <snakeyaml.version>2.0</snakeyaml.version>
        <junit.jupiter.version>5.10.2</junit.jupiter.version>
    </properties>

    <repositories>
        <repository>
            <id>central-portal</id>
            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
        </repository>
    </repositories>

    <modules>
        <module>config-model</module>
        <module>code-generator</module>
        <module>openapi-generator</module>
        <module>e2e-test-interfaces</module>
        <module>e2e-tests</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-clean-plugin</artifactId>
                <version>${maven-clean-plugin.version}</version>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>${project.basedir}/openapi</directory>
                            <includes>
                                <include>*.yaml</include>
                            </includes>
                        </fileset>
                        <fileset>
                            <directory>${project.basedir}</directory>
                            <includes>
                                <include>index.html</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>com.czertainly</groupId>
            <artifactId>interfaces</artifactId>
            <version>${apiVersion}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
            <version>${springdoc-openapi.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springdoc</groupId>
            <artifactId>springdoc-openapi-starter-common</artifactId>
            <version>${springdoc-openapi.version}</version>
        </dependency>

        <dependency>
            <groupId>org.yaml</groupId>
            <artifactId>snakeyaml</artifactId>
            <version>${snakeyaml.version}</version>
        </dependency>
    </dependencies>
</project>
